# mini-exp-2-tilemap

./: Cargo.toml
assets/: cow.ase  level1.tmx  player.ase  set2.tsx
src/: camera.rs  main.rs  tiled.rs
